--- a/release-please-config.json
+++ b/release-please-config.json
@@ -11,6 +11,10 @@
     "hello-rust": {
       "path": "hello-rust",
       "release-type": "rust"
+    },
+    "litellm-helm": {
+      "path": "litellm-helm",
+      "release-type": "helm"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
