--- a/litellm-helm/templates/deployment.yaml
+++ b/litellm-helm/templates/deployment.yaml
@@ -10,6 +10,7 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
     test2: true
+    test3: true
 spec:
   replicas: {{ .Values.replicaCount }}
   {{- with .Values.strategy }}
