--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -30,6 +30,8 @@ jobs:
         continue-on-error: true
         run: |
           echo "Release outputs:"
+          echo "litellm-helm--release_created: ${{ steps.release.outputs.litellm-helm--release_created}}"
+          echo "litellm-helm--tag_name: ${{ steps.release.outputs.litellm-helm--tag_name}}"
 
   release-hello-react:
     if: ${{needs.release-please.outputs.hello-react--release_created}}
