feat: Update serviceaccount.yaml
feat: Update serviceaccount.yaml

--- a/litellm-helm/templates/serviceaccount.yaml
+++ b/litellm-helm/templates/serviceaccount.yaml
@@ -4,6 +4,7 @@ kind: ServiceAccount
 metadata:
   name: {{ template "litellm.serviceAccountName" . }}
   labels:
+    thi: "test"
     app: {{ template "litellm.name" . }}
     chart: {{ template "litellm.chart" . }}
     heritage: {{ .Release.Service }}
